<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CtsVehicle</string>
    <string name="action_settings">Settings</string>
    <string name="bat">电流</string>
    <string name="code">错误码</string>
    <string name="vehicle">车身</string>
    <string name="close">关闭</string>
    <string name="get">获取</string>
    <string name="ret">返回</string>
    <string name="kill">挂掉</string>
    
    <string name="vin">vin码</string>
    <string name="gate">车门信息</string>
    <string name="saftbelt">安全带</string>
    <string name="key">钥匙信息</string>
    
    <string name="window">车窗信息</string>
    <string name="mirror">后视镜信息</string>
    <string name="light">车灯信息</string>
    <string name="adas">ADAS</string>   
    
     <string name="temperature">环境温度</string>
    <string name="aircondition">空调信息</string>
    <string name="oil">油门信息</string>
    <string name="saftbag">安全气囊</string>
    
    
</resources>
