<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/vehicle_ret"
            android:layout_width="@dimen/main_button_width"
            android:layout_height="@dimen/main_button_heigth"
            android:layout_gravity="top|left"
            android:text="@string/ret" />

        <Button
            android:id="@+id/vehicle_close"
            android:layout_width="@dimen/main_button_width"
            android:layout_height="@dimen/main_button_heigth"
            android:layout_gravity="top|right"
            android:text="@string/close" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="DisableBaselineAlignment" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/vehicle_vin"
                android:layout_width="@dimen/main_button_width"
                android:layout_height="@dimen/main_button_heigth"
                android:text="@string/vin" />

            <Button
                android:id="@+id/vehicle_gate"
                android:layout_width="@dimen/main_button_width"
                android:layout_height="@dimen/main_button_heigth"
                android:text="@string/gate" />

            <Button
                android:id="@+id/vehicle_saftbelt"
                android:layout_width="@dimen/main_button_width"
                android:layout_height="@dimen/main_button_heigth"
                android:text="@string/saftbelt" />

            <Button
                android:id="@+id/vehicle_key"
                android:layout_width="@dimen/main_button_width"
                android:layout_height="@dimen/main_button_heigth"
                android:text="@string/key" />

            <Button
                android:id="@+id/vehicle_window"
                android:layout_width="@dimen/main_button_width"
                android:layout_height="@dimen/main_button_heigth"
                android:text="@string/window" />

            <Button
                android:id="@+id/vehicle_mirror"
                android:layout_width="@dimen/main_button_width"
                android:layout_height="@dimen/main_button_heigth"
                android:text="@string/mirror" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/vehicle_light"
                android:layout_width="@dimen/main_button_width"
                android:layout_height="@dimen/main_button_heigth"
                android:text="@string/light" />

            <Button
                android:id="@+id/vehicle_adas"
                android:layout_width="@dimen/main_button_width"
                android:layout_height="@dimen/main_button_heigth"
                android:text="@string/adas" />

            <Button
                android:id="@+id/vehicle_temperature"
                android:layout_width="@dimen/main_button_width"
                android:layout_height="@dimen/main_button_heigth"
                android:text="@string/temperature" />

            <Button
                android:id="@+id/vehicle_aircondition"
                android:layout_width="@dimen/main_button_width"
                android:layout_height="@dimen/main_button_heigth"
                android:text="@string/aircondition" />

            <Button
                android:id="@+id/vehicle_oil"
                android:layout_width="@dimen/main_button_width"
                android:layout_height="@dimen/main_button_heigth"
                android:text="@string/oil" />

            <Button
                android:id="@+id/vehicle_saftbag"
                android:layout_width="@dimen/main_button_width"
                android:layout_height="@dimen/main_button_heigth"
                android:text="@string/saftbag" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>