<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="match_parent"
	    android:layout_gravity="left|top"
	    android:orientation="vertical" >

	    <Button
	        android:id="@+id/main_batttery"
	        android:layout_width="@dimen/main_button_width"
	        android:layout_height="@dimen/main_button_heigth"
	        android:text="@string/bat" />

	    <Button
	        android:id="@+id/main_code"
	        android:layout_width="@dimen/main_button_width"
	        android:layout_height="@dimen/main_button_heigth"
	        android:text="@string/code" />

	    <Button
	        android:id="@+id/main_vehicle"
	        android:layout_width="@dimen/main_button_width"
	        android:layout_height="@dimen/main_button_heigth"
	        android:text="@string/vehicle" />
	</LinearLayout>

	<Button
	    android:id="@+id/main_close"
	    android:layout_gravity="right|top"
	    android:layout_width="@dimen/main_button_width"
	    android:layout_height="@dimen/main_button_heigth"
	    android:text="@string/close" />

</FrameLayout>
